add some new infos

--- a/sketches/water-meter-v2/platformio.ini
+++ b/sketches/water-meter-v2/platformio.ini
@@ -12,5 +12,6 @@
 platform = atmelavr
 board = pro8MHzatmega328
 framework = arduino
+monitor_speed = 115200
 ; See lib folder : https://github.com/matthijskooijman/arduino-lmic/releases/tag/1.5.1
 ;lib_extra_dirs = F:\Personal\Projects\Programming\water-meter-v2\sketches\water-meter-v2\lib\arduino-lmic-1.5.1\src
